# dual-pane-file-manager

./: Cargo.toml  README.md
src/: action.rs  app.rs  bookmark.rs  config.rs  dir.rs  input.rs  main.rs  search.rs
