[package]
name = "dual-pane-file-manager"
version = "0.1.0"
authors = ["te9yie <te9yie@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "*"
crossterm = "*"
dirs = "*"
fs_extra = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tui = { version = "*", default-features = false, features = ["crossterm"] }
